; ModuleID = '/home/carl/AnghaBench/nginx/src/os/unix/extr_ngx_errno.c_ngx_strerror.c'
source_filename = "/home/carl/AnghaBench/nginx/src/os/unix/extr_ngx_errno.c_ngx_strerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@NGX_SYS_NERR = common dso_local global i64 0, align 8
@ngx_sys_errlist = common dso_local global %struct.TYPE_4__* null, align 8
@ngx_unknown_error = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ngx_strerror(i64 %0, i32* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @NGX_SYS_NERR, align 8
  %10 = icmp slt i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** @ngx_sys_errlist, align 8
  %13 = load i64, i64* %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i64 %13
  br label %16

15:                                               ; preds = %3
  br label %16

16:                                               ; preds = %15, %11
  %17 = phi %struct.TYPE_4__* [ %14, %11 ], [ @ngx_unknown_error, %15 ]
  store %struct.TYPE_4__* %17, %struct.TYPE_4__** %7, align 8
  %18 = load i64, i64* %6, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @ngx_min(i64 %18, i32 %21)
  store i64 %22, i64* %6, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i64, i64* %6, align 8
  %28 = call i32* @ngx_cpymem(i32* %23, i32 %26, i64 %27)
  ret i32* %28
}

declare dso_local i64 @ngx_min(i64, i32) #1

declare dso_local i32* @ngx_cpymem(i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
